@@ -16,9 +16,7 @@ repositories {
 
 
 dependencies {
-    // Source: https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit
     implementation("org.slf4j:slf4j-api:2.0.17")
-    // Source: https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
     implementation("ch.qos.logback:logback-classic:1.5.32")
     implementation("org.eclipse.jgit:org.eclipse.jgit.ssh.jsch:7.6.0.202603022253-r")
     implementation("org.eclipse.jgit:org.eclipse.jgit:7.6.0.202603022253-r")
@@ -27,6 +25,38 @@ dependencies {
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(25))
+    }
+}
+graalvmNative {
+    toolchainDetection.set(true)
+}
+graalvmNative {
+    binaries {
+        named("main") {
+            mainClass.set("Main")
+
+            imageName.set("auto-commiter")
+        }
+    }
+}
+graalvmNative {
+    binaries {
+        named("main") {
+            buildArgs.add("-H:+AddAllCharsets")
+            buildArgs.add("--add-exports=java.base/sun.security.x509=ALL-UNNAMED")
+            buildArgs.add("--add-exports=java.base/sun.security.util=ALL-UNNAMED")
+
+            buildArgs.add("--initialize-at-build-time=sun.security.x509.X509CertImpl")
+            buildArgs.add("--initialize-at-build-time=sun.security.x509.X509CertInfo")
+
+            buildArgs.add("--enable-https")
+            buildArgs.add("--enable-http")
+        }
+    }
+}
 tasks.test {
     useJUnitPlatform()
 }
